--- a/scss/bannerTop.scss
+++ b/scss/bannerTop.scss
@@ -40,15 +40,24 @@
             justify-content: center;
             align-items: center;
             
-            a{
-            background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
-            border: none;
-            padding: 12px;
-            color: #fff;
-            font-family: 'Rokkitt', serif;
-            font-size: 17px;
-            text-decoration: none;
-            margin-top: 10px;
+            button{
+                background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
+                border: none;
+                padding: 12px;
+                margin-top: 10px;
+                
+                &:hover,
+                &:focus {
+                  box-shadow: inset 5em 2em 5em 2em #1D90A9;
+                  transition: .2s .1s ease-in-out;
+                   }
+                
+                a{
+                    color: #fff;
+                    font-family: 'Rokkitt', serif;
+                    font-size: 17px;
+                    text-decoration: none;
+                }
             }
         }
         .image_abstract_item{
@@ -111,15 +120,24 @@
             justify-content: center;
             align-items: center;
             
-            a{
-            background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
-            border: none;
-            padding: 12px;
-            color: #fff;
-            font-family: 'Rokkitt', serif;
-            font-size: 17px;
-            text-decoration: none;
-            margin-top: 10px;
+            button{
+                background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
+                border: none;
+                padding: 12px;
+                margin-top: 10px;
+                
+                &:hover,
+                &:focus {
+                  box-shadow: inset 5em 2em 5em 2em #1D90A9;
+                  transition: .2s .1s ease-in-out;
+                   }
+                
+                a{
+                    color: #fff;
+                    font-family: 'Rokkitt', serif;
+                    font-size: 17px;
+                    text-decoration: none;
+                }
             }
         }
         .image_abstract_item{
@@ -207,15 +225,24 @@
             margin-left: 33px;
             margin-top: -90px;
             
-            a{
-            background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
-            border: none;
-            padding: 12px;
-            color: #fff;
-            font-family: 'Rokkitt', serif;
-            font-size: 17px;
-            text-decoration: none;
-            margin-top: 10px;
+            button{
+                background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
+                border: none;
+                padding: 12px;
+                margin-top: 10px;
+                
+                &:hover,
+                &:focus {
+                  box-shadow: inset 5em 2em 5em 2em #1D90A9;
+                  transition: .2s .1s ease-in-out;
+                   }
+                
+                a{
+                    color: #fff;
+                    font-family: 'Rokkitt', serif;
+                    font-size: 17px;
+                    text-decoration: none;
+                }
             }
         }
         .image_abstract_item{
@@ -294,15 +321,24 @@
             margin-left: 30px;
             margin-top: -100px;
             
-            a{
-            background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
-            border: none;
-            padding: 12px;
-            color: #fff;
-            font-family: 'Rokkitt', serif;
-            font-size: 17px;
-            text-decoration: none;
-            margin-top: 10px;
+            button{
+                background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
+                border: none;
+                padding: 12px;
+                margin-top: 10px;
+                
+                &:hover,
+                &:focus {
+                  box-shadow: inset 5em 2em 5em 2em #1D90A9;
+                  transition: .2s .1s ease-in-out;
+                   }
+                
+                a{
+                    color: #fff;
+                    font-family: 'Rokkitt', serif;
+                    font-size: 17px;
+                    text-decoration: none;
+                }
             }
         }
         .image_abstract_item{
@@ -380,15 +416,24 @@
             margin-left: 30px;
             margin-top: -270px;
             
-            a{
-            background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
-            border: none;
-            padding: 12px;
-            color: #fff;
-            font-family: 'Rokkitt', serif;
-            font-size: 17px;
-            text-decoration: none;
-            margin-top: 10px;
+            button{
+                background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
+                border: none;
+                padding: 12px;
+                margin-top: 10px;
+                
+                &:hover,
+                &:focus {
+                  box-shadow: inset 5em 2em 5em 2em #1D90A9;
+                  transition: .2s .1s ease-in-out;
+                   }
+                
+                a{
+                    color: #fff;
+                    font-family: 'Rokkitt', serif;
+                    font-size: 17px;
+                    text-decoration: none;
+                }
             }
         }
         .image_abstract_item{
@@ -467,15 +512,24 @@
             margin-left: 53px;
             margin-top: -350px;
             
-            a{
-            background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
-            border: none;
-            padding: 12px;
-            color: #fff;
-            font-family: 'Rokkitt', serif;
-            font-size: 17px;
-            text-decoration: none;
-            margin-top: 10px;
+            button{
+                background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
+                border: none;
+                padding: 12px;
+                margin-top: 10px;
+                
+                &:hover,
+                &:focus {
+                  box-shadow: inset 5em 2em 5em 2em #1D90A9;
+                  transition: .2s .1s ease-in-out;
+                   }
+                
+                a{
+                    color: #fff;
+                    font-family: 'Rokkitt', serif;
+                    font-size: 17px;
+                    text-decoration: none;
+                }
             }
         }
         .image_abstract_item{
