--- a/scss/bannerTop.css
+++ b/scss/bannerTop.css
@@ -10,16 +10,28 @@
     font-size: 32px;
     font-family: 'Rokkitt', serif;
     margin-top: 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 10px;
     font-size: 26px;
   }
@@ -27,25 +39,40 @@
     color: #000000;
     font-family: 'Rokkitt', serif;
     font-size: 21px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 10px;
     text-align: center;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #banner-top-info .button-area button {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
     margin-top: 10px;
   }
   #banner-top-info .button-area button:hover, #banner-top-info .button-area button:focus {
-    box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-box-shadow: inset 5em 2em 5em 2em #1D90A9;
+            box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-transition: .2s .1s ease-in-out;
     transition: .2s .1s ease-in-out;
   }
   #banner-top-info .button-area button a {
@@ -65,6 +92,7 @@
     -o-transform: rotate(420deg);
     margin-left: -60px;
     margin-top: -40px;
+    z-index: -1;
   }
 }
 
@@ -80,16 +108,28 @@
     font-size: 32px;
     font-family: 'Rokkitt', serif;
     margin-top: 120px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 10px;
     font-size: 26px;
   }
@@ -97,25 +137,40 @@
     color: #000000;
     font-family: 'Rokkitt', serif;
     font-size: 21px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 10px;
     text-align: center;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #banner-top-info .button-area button {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
     margin-top: 10px;
   }
   #banner-top-info .button-area button:hover, #banner-top-info .button-area button:focus {
-    box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-box-shadow: inset 5em 2em 5em 2em #1D90A9;
+            box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-transition: .2s .1s ease-in-out;
     transition: .2s .1s ease-in-out;
   }
   #banner-top-info .button-area button a {
@@ -136,6 +191,7 @@
     -o-transform: rotate(420deg);
     margin-left: -60px;
     margin-top: -150px;
+    z-index: -1;
   }
 }
 
@@ -144,15 +200,22 @@
     overflow-x: hidden;
   }
   #banner-top-info .image img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    -webkit-box-align: right;
+        -ms-flex-align: right;
+            align-items: right;
     width: 600px;
     height: auto;
     float: right;
     margin-right: -240px;
     margin-top: -35px;
-    transform: rotateX(730deg);
+    -webkit-transform: rotateX(730deg);
+            transform: rotateX(730deg);
   }
   #banner-top-info .author {
     position: absolute;
@@ -174,17 +237,29 @@
     font-family: 'Rokkitt', serif;
     margin-top: 80px;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     font-size: 32px;
   }
   #banner-top-info .author p {
@@ -193,25 +268,40 @@
     font-family: 'Rokkitt', serif;
     font-size: 24px;
     float: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     margin-left: 33px;
     margin-top: -90px;
   }
   #banner-top-info .button-area button {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
     margin-top: 10px;
   }
   #banner-top-info .button-area button:hover, #banner-top-info .button-area button:focus {
-    box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-box-shadow: inset 5em 2em 5em 2em #1D90A9;
+            box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-transition: .2s .1s ease-in-out;
     transition: .2s .1s ease-in-out;
   }
   #banner-top-info .button-area button a {
@@ -230,15 +320,22 @@
     overflow-x: hidden;
   }
   #banner-top-info .image img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    -webkit-box-align: right;
+        -ms-flex-align: right;
+            align-items: right;
     width: 600px;
     height: auto;
     float: right;
     margin-right: -240px;
     margin-top: -35px;
-    transform: rotateX(730deg);
+    -webkit-transform: rotateX(730deg);
+            transform: rotateX(730deg);
   }
   #banner-top-info .author {
     position: absolute;
@@ -260,17 +357,29 @@
     font-family: 'Rokkitt', serif;
     margin-top: 80px;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     font-size: 32px;
   }
   #banner-top-info .author p {
@@ -279,25 +388,40 @@
     font-family: 'Rokkitt', serif;
     font-size: 24px;
     float: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     margin-left: 30px;
     margin-top: -100px;
   }
   #banner-top-info .button-area button {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
     margin-top: 10px;
   }
   #banner-top-info .button-area button:hover, #banner-top-info .button-area button:focus {
-    box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-box-shadow: inset 5em 2em 5em 2em #1D90A9;
+            box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-transition: .2s .1s ease-in-out;
     transition: .2s .1s ease-in-out;
   }
   #banner-top-info .button-area button a {
@@ -316,15 +440,22 @@
     overflow-x: hidden;
   }
   #banner-top-info .image img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    -webkit-box-align: right;
+        -ms-flex-align: right;
+            align-items: right;
     width: 900px;
     height: 650px;
     float: right;
     margin-right: -100px;
     margin-top: -20px;
-    transform: rotateX(730deg);
+    -webkit-transform: rotateX(730deg);
+            transform: rotateX(730deg);
   }
   #banner-top-info .author {
     position: absolute;
@@ -346,17 +477,29 @@
     font-family: 'Rokkitt', serif;
     margin-top: 80px;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     font-size: 26px;
   }
   #banner-top-info .author p {
@@ -365,25 +508,40 @@
     font-family: 'Rokkitt', serif;
     font-size: 22px;
     float: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     margin-left: 30px;
     margin-top: -270px;
   }
   #banner-top-info .button-area button {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
     margin-top: 10px;
   }
   #banner-top-info .button-area button:hover, #banner-top-info .button-area button:focus {
-    box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-box-shadow: inset 5em 2em 5em 2em #1D90A9;
+            box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-transition: .2s .1s ease-in-out;
     transition: .2s .1s ease-in-out;
   }
   #banner-top-info .button-area button a {
@@ -402,15 +560,22 @@
     overflow-x: hidden;
   }
   #banner-top-info .image img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    -webkit-box-align: right;
+        -ms-flex-align: right;
+            align-items: right;
     width: 900px;
     height: auto;
     float: right;
     margin-right: -120px;
     margin-top: -35px;
-    transform: rotateX(730deg);
+    -webkit-transform: rotateX(730deg);
+            transform: rotateX(730deg);
   }
   #banner-top-info .author {
     position: absolute;
@@ -432,17 +597,29 @@
     font-family: 'Rokkitt', serif;
     margin-top: 80px;
     margin-left: 53px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
     margin-left: 53px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     font-size: 28px;
     margin-top: 40px;
   }
@@ -452,25 +629,40 @@
     font-family: 'Rokkitt', serif;
     font-size: 20px;
     float: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     margin-left: 53px;
     margin-top: -350px;
   }
   #banner-top-info .button-area button {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
     margin-top: 10px;
   }
   #banner-top-info .button-area button:hover, #banner-top-info .button-area button:focus {
-    box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-box-shadow: inset 5em 2em 5em 2em #1D90A9;
+            box-shadow: inset 5em 2em 5em 2em #1D90A9;
+    -webkit-transition: .2s .1s ease-in-out;
     transition: .2s .1s ease-in-out;
   }
   #banner-top-info .button-area button a {
@@ -483,3 +675,4 @@
     display: none;
   }
 }
+/*# sourceMappingURL=bannerTop.css.map */
