--- a/scss/bannerTop.scss
+++ b/scss/bannerTop.scss
@@ -72,6 +72,7 @@
                 -o-transform: rotate(420deg);
                 margin-left: -60px;
                 margin-top: -40px;
+                z-index: -1;
             }
         }
   }
@@ -153,6 +154,7 @@
                 -o-transform: rotate(420deg);
                 margin-left: -60px;
                 margin-top: -150px;
+                z-index: -1;
             }
         }
   }
