--- a/scss/navMedia.css
+++ b/scss/navMedia.css
@@ -1,54 +1,133 @@
 @media only screen and (max-width: 479px) {
   header .logo img {
+    position: absolute;
+    left: calc(100% - 150px);
     float: right;
     width: 135px;
     height: 30px;
-    margin-top: 20px;
+    margin-top: -60px;
     margin-right: 10px;
+  }
+  header .hamburger {
+    position: fixed;
+    padding: 10px;
+    display: inline-block;
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    margin-left: 15px;
+    margin-top: -70px;
+    z-index: 999;
   }
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   header .logo img {
+    position: absolute;
+    left: calc(100% - 150px);
+    float: right;
+    width: 135px;
+    height: 30px;
+    margin-top: -90px;
+    margin-right: 10px;
+  }
+  header .hamburger {
+    position: fixed;
+    padding: 10px;
+    display: inline-block;
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    margin-left: 15px;
+    margin-top: -100px;
+    z-index: 999;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 800px) {
+  header .logo img {
+    position: absolute;
+    left: calc(100% - 150px);
+    float: right;
+    width: 135px;
+    height: 30px;
+    margin-top: -90px;
+    margin-right: 10px;
+  }
+  header .hamburger {
+    position: fixed;
+    padding: 10px;
+    display: inline-block;
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    margin-left: 15px;
+    margin-top: -100px;
+    z-index: 999;
+  }
+}
+
+@media only screen and (min-width: 801px) and (max-width: 1200px) {
+  header .logo img {
+    position: absolute;
+    left: calc(100% - 150px);
     float: right;
     width: 135px;
     height: 30px;
     margin-top: 20px;
     margin-right: 10px;
   }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1599px) {
-  header .logo img {
-    float: right;
-    width: 210px;
-    height: 50px;
-    margin-top: 5px;
-    margin-right: 30px;
+  header .hamburger {
+    position: fixed;
+    padding: 10px;
+    display: inline-block;
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    margin-left: 15px;
+    margin-top: 10px;
+    z-index: 999;
   }
 }
 
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
-.hamburger {
-  padding: 10px;
-  display: inline-block;
-  cursor: pointer;
-  background-color: transparent;
-  border: 0;
-  margin: 0;
-  margin-top: 10px;
-  margin-left: 20px;
+@media only screen and (min-width: 1201px) and (max-width: 1366px) {
+  header .logo img {
+    position: absolute;
+    left: calc(100% - 150px);
+    float: right;
+    width: 135px;
+    height: 30px;
+    margin-top: 20px;
+    margin-right: 10px;
+  }
+  header .hamburger {
+    position: fixed;
+    padding: 10px;
+    display: inline-block;
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    margin-left: 15px;
+    margin-top: 10px;
+    z-index: 999;
+  }
 }
 
 .hamburger, .navigation {
+  -webkit-transition: -webkit-transform .3s .1s ease-in-out;
+  transition: -webkit-transform .3s .1s ease-in-out;
   transition: transform .3s .1s ease-in-out;
+  transition: transform .3s .1s ease-in-out, -webkit-transform .3s .1s ease-in-out;
 }
 
 .hamburger--active {
-  transform: translatex(250px);
+  -webkit-transform: translatex(250px);
+          transform: translatex(250px);
 }
 
 .hamburger__box {
@@ -65,7 +144,9 @@
   position: absolute;
   left: 0;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: background-color .1s .2s ease-in-out;
   transition: background-color .1s .2s ease-in-out;
 }
 
@@ -77,7 +158,10 @@
   position: absolute;
   content: '';
   left: 0;
+  -webkit-transition: -webkit-transform .2s .2s ease-in-out;
+  transition: -webkit-transform .2s .2s ease-in-out;
   transition: transform .2s .2s ease-in-out;
+  transition: transform .2s .2s ease-in-out, -webkit-transform .2s .2s ease-in-out;
 }
 
 .hamburger__inner::before {
@@ -93,26 +177,30 @@
 }
 
 .hamburger--active .hamburger__inner:before {
-  transform: translateY(10px) rotate(45deg);
+  -webkit-transform: translateY(10px) rotate(45deg);
+          transform: translateY(10px) rotate(45deg);
 }
 
 .hamburger--active .hamburger__inner:after {
-  transform: translateY(-10px) rotate(-45deg);
+  -webkit-transform: translateY(-10px) rotate(-45deg);
+          transform: translateY(-10px) rotate(-45deg);
 }
 
 .navigation {
   height: 100vh;
   width: 250px;
   background-color: #171717;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  transform: translateX(-250px);
+  -webkit-transform: translateX(-250px);
+          transform: translateX(-250px);
   z-index: 999;
 }
 
 .navigation--active {
-  transform: translateX(0px);
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
 }
 
 .navigation__list {
@@ -131,3 +219,4 @@
   font-family: 'Rokkitt', serif;
   font-size: 24px;
 }
+/*# sourceMappingURL=navMedia.css.map */
