--- a/scss/portfolio.css
+++ b/scss/portfolio.css
@@ -4,7 +4,6 @@
     border-radius: 25px;
     background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
-    color: white;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -20,8 +19,13 @@
             align-items: center;
     margin: 0 auto;
     padding: 10px;
-    width: 200px;
-    margin-top: 50px;
+    width: 260px;
+    margin-top: 70px;
+    font-size: 18px;
+  }
+  #portfolio .getproject button a {
+    text-decoration: none;
+    color: #fff;
   }
   #portfolio .next_and_back_slide_show button.left-arrow {
     border: none;
@@ -93,7 +97,6 @@
     border-radius: 25px;
     background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
-    color: white;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -109,8 +112,13 @@
             align-items: center;
     margin: 0 auto;
     padding: 10px;
-    width: 200px;
-    margin-top: 50px;
+    width: 260px;
+    margin-top: 70px;
+    font-size: 18px;
+  }
+  #portfolio .getproject button a {
+    text-decoration: none;
+    color: #fff;
   }
   #portfolio .next_and_back_slide_show button.left-arrow {
     border: none;
@@ -184,7 +192,6 @@
     border-radius: 25px;
     background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
-    color: white;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -200,8 +207,13 @@
             align-items: center;
     margin: 0 auto;
     padding: 10px;
-    width: 200px;
-    margin-top: 50px;
+    width: 260px;
+    margin-top: 70px;
+    font-size: 18px;
+  }
+  #portfolio .getproject button a {
+    text-decoration: none;
+    color: #fff;
   }
   #portfolio .next_and_back_slide_show button.left-arrow {
     border: none;
@@ -366,7 +378,6 @@
     border-radius: 25px;
     background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
-    color: white;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -385,6 +396,10 @@
     width: 260px;
     margin-top: 70px;
     font-size: 18px;
+  }
+  #portfolio .getproject button a {
+    text-decoration: none;
+    color: #fff;
   }
   #portfolio .next_and_back_slide_show button.left-arrow {
     border: none;
@@ -458,7 +473,6 @@
     border-radius: 25px;
     background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
-    color: white;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -475,7 +489,12 @@
     margin: 0 auto;
     padding: 10px;
     width: 260px;
-    margin-top: 60px;
+    margin-top: 70px;
+    font-size: 18px;
+  }
+  #portfolio .getproject button a {
+    text-decoration: none;
+    color: #fff;
   }
   #portfolio .next_and_back_slide_show button.left-arrow {
     border: none;
