--- a/scss/offer.css
+++ b/scss/offer.css
@@ -1,11 +1,11 @@
 @media only screen and (min-width: 320px) and (max-width: 479px) {
-  .offer-top-text h2 {
+  #offertext h2 {
     text-align: center;
     font-family: 'Rokkitt', serif;
     margin-top: 130px;
     font-size: 27px;
   }
-  .offer-top-text h2 b {
+  #offertext h2 b {
     background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -56,13 +56,13 @@
 }
 
 @media only screen and (min-width: 480px) and (max-width: 799px) {
-  .offer-top-text h2 {
+  #offertext h2 {
     text-align: center;
     font-family: 'Rokkitt', serif;
     margin-top: 130px;
     font-size: 27px;
   }
-  .offer-top-text h2 b {
+  #offertext h2 b {
     background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -113,7 +113,7 @@
 }
 
 @media only screen and (min-width: 800px) and (max-width: 1023px) {
-  .offer-top-text {
+  #offertext {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -124,12 +124,12 @@
         -ms-flex-align: center;
             align-items: center;
   }
-  .offer-top-text h2 {
+  #offertext h2 {
     font-family: 'Rokkitt', serif;
     margin-top: 180px;
     font-size: 27px;
   }
-  .offer-top-text h2 .element {
+  #offertext h2 .element {
     position: absolute;
     background-color: #1abaeb;
     width: 135px;
@@ -139,7 +139,7 @@
     z-index: -1;
     opacity: 0.8;
   }
-  .offer-top-text h2 b {
+  #offertext h2 b {
     background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -192,7 +192,7 @@
 }
 
 @media only screen and (min-width: 1023px) and (max-width: 1200px) {
-  .offer-top-text {
+  #offertext {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -203,12 +203,12 @@
         -ms-flex-align: center;
             align-items: center;
   }
-  .offer-top-text h2 {
+  #offertext h2 {
     font-family: 'Rokkitt', serif;
     margin-top: 200px;
     font-size: 27px;
   }
-  .offer-top-text h2 .element {
+  #offertext h2 .element {
     position: absolute;
     background-color: #1abaeb;
     width: 135px;
@@ -218,7 +218,7 @@
     z-index: -1;
     opacity: 0.8;
   }
-  .offer-top-text h2 b {
+  #offertext h2 b {
     background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -271,7 +271,7 @@
 }
 
 @media only screen and (min-width: 1201px) and (max-width: 1366px) {
-  .offer-top-text {
+  #offertext {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -282,12 +282,12 @@
         -ms-flex-align: center;
             align-items: center;
   }
-  .offer-top-text h2 {
+  #offertext h2 {
     font-family: 'Rokkitt', serif;
     margin-top: 200px;
     font-size: 28px;
   }
-  .offer-top-text h2 .element {
+  #offertext h2 .element {
     position: absolute;
     background-color: #1abaeb;
     width: 115px;
@@ -297,7 +297,7 @@
     z-index: -1;
     opacity: 0.7;
   }
-  .offer-top-text h2 b {
+  #offertext h2 b {
     background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -350,7 +350,7 @@
 }
 
 @media only screen and (min-width: 1367px) and (max-width: 1440px) {
-  .offer-top-text {
+  #offertext {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -361,12 +361,12 @@
         -ms-flex-align: center;
             align-items: center;
   }
-  .offer-top-text h2 {
+  #offertext h2 {
     font-family: 'Rokkitt', serif;
     margin-top: 200px;
     font-size: 28px;
   }
-  .offer-top-text h2 .element {
+  #offertext h2 .element {
     position: absolute;
     background-color: #1abaeb;
     width: 135px;
@@ -376,7 +376,7 @@
     z-index: -1;
     opacity: 0.8;
   }
-  .offer-top-text h2 b {
+  #offertext h2 b {
     background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
