--- a/scss/offer.scss
+++ b/scss/offer.scss
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 320px) and (max-width: 479px) {
-    .offer-top-text{
+    #offertext{
         h2{
             text-align: center;
             font-family: 'Rokkitt', serif;
@@ -50,7 +50,7 @@
 
 
 @media only screen and (min-width: 480px) and (max-width: 799px) {
-    .offer-top-text{
+    #offertext{
         h2{
             text-align: center;
             font-family: 'Rokkitt', serif;
@@ -101,7 +101,7 @@
 
 
 @media only screen and (min-width: 800px) and (max-width: 1023px) {
-    .offer-top-text{
+    #offertext{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -167,7 +167,7 @@
 
 
 @media only screen and (min-width: 1023px) and (max-width: 1200px) {
-    .offer-top-text{
+    #offertext{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -232,7 +232,7 @@
 
 
 @media only screen and (min-width: 1201px) and (max-width: 1366px) {
-    .offer-top-text{
+    #offertext{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -297,7 +297,7 @@
 
 
 @media only screen and (min-width: 1367px) and (max-width: 1440px) {
-    .offer-top-text{
+    #offertext{
         display: flex;
         justify-content: center;
         align-items: center;
