Add working button code to about me section

--- a/scss/aboutme.css
+++ b/scss/aboutme.css
@@ -3,15 +3,9 @@
     overflow-x: hidden;
   }
   #about-me h1 {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     font-size: 34px;
     font-family: 'Rokkitt', serif;
     margin-top: 150px;
@@ -23,15 +17,9 @@
     display: none;
   }
   #about-me .info_about_me p {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     margin-left: 3%;
     margin-right: 3%;
@@ -44,26 +32,19 @@
   #about-me button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
-    color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 180px;
     margin-top: 50px;
+  }
+  #about-me button a {
+    color: white;
+    text-decoration: none;
   }
 }
 
@@ -72,15 +53,9 @@
     overflow-x: hidden;
   }
   #about-me h1 {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     font-size: 34px;
     font-family: 'Rokkitt', serif;
     margin-top: 150px;
@@ -92,15 +67,9 @@
     display: none;
   }
   #about-me .info_about_me p {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     margin-left: 10%;
     margin-right: 10%;
@@ -113,37 +82,25 @@
   #about-me button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 180px;
     margin-top: 50px;
   }
+  #about-me button a {
+    color: white;
+    text-decoration: none;
+  }
   #about-me img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: right;
-        -ms-flex-pack: right;
-            justify-content: right;
-    -webkit-box-align: right;
-        -ms-flex-align: right;
-            align-items: right;
+    justify-content: right;
+    align-items: right;
     float: right;
     width: 90px;
     height: auto;
@@ -162,15 +119,9 @@
     overflow-x: hidden;
   }
   #about-me h1 {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     font-size: 40px;
     font-family: 'Rokkitt', serif;
     margin-top: 190px;
@@ -182,15 +133,9 @@
     display: none;
   }
   #about-me .info_about_me p {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     margin-left: 10%;
     margin-right: 10%;
@@ -205,15 +150,9 @@
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     margin-top: -210px;
     margin-left: -210px;
@@ -229,26 +168,20 @@
   #about-me button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 180px;
     margin-top: 100px;
+  }
+  #about-me button a {
+    color: white;
+    text-decoration: none;
   }
   #about-me img {
     display: none;
@@ -260,15 +193,9 @@
     overflow-x: hidden;
   }
   #about-me h1 {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     font-size: 44px;
     font-family: 'Rokkitt', serif;
     margin-top: 300px;
@@ -281,15 +208,9 @@
     display: none;
   }
   #about-me .info_about_me p {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     margin-left: 10%;
     margin-right: 10%;
@@ -304,15 +225,9 @@
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     margin-top: -190px;
     margin-left: -180px;
@@ -328,38 +243,26 @@
   #about-me button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 260px;
     margin-top: 100px;
     font-size: 18px;
   }
+  #about-me button a {
+    color: white;
+    text-decoration: none;
+  }
   #about-me img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: right;
-        -ms-flex-pack: right;
-            justify-content: right;
-    -webkit-box-align: right;
-        -ms-flex-align: right;
-            align-items: right;
+    justify-content: right;
+    align-items: right;
     float: right;
     width: 90px;
     height: auto;
@@ -377,15 +280,9 @@
     overflow-x: hidden;
   }
   #about-me h1 {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     font-size: 44px;
     font-family: 'Rokkitt', serif;
     margin-top: 320px;
@@ -398,15 +295,9 @@
     display: none;
   }
   #about-me .info_about_me p {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     margin-left: 10%;
     margin-right: 10%;
@@ -421,15 +312,9 @@
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     margin-top: -190px;
     margin-left: -180px;
@@ -445,38 +330,26 @@
   #about-me button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 260px;
     margin-top: 100px;
     font-size: 18px;
   }
+  #about-me button a {
+    color: white;
+    text-decoration: none;
+  }
   #about-me img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: right;
-        -ms-flex-pack: right;
-            justify-content: right;
-    -webkit-box-align: right;
-        -ms-flex-align: right;
-            align-items: right;
+    justify-content: right;
+    align-items: right;
     float: right;
     width: 90px;
     height: auto;
@@ -488,4 +361,3 @@
     -o-transform: rotate(310deg);
   }
 }
-/*# sourceMappingURL=aboutme.css.map */
