--- a/scss/aboutme.scss
+++ b/scss/aboutme.scss
@@ -35,7 +35,6 @@
             border: none;
             border-radius: 25px;
             background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
-            color: white;
             display: flex;
             justify-content: center;
             flex-direction: column; 
@@ -44,6 +43,11 @@
             padding: 10px;
             width: 180px;
             margin-top: 50px;
+            
+            a{
+                color: white;
+                text-decoration: none;
+            }
         }
     }
 }
@@ -95,6 +99,10 @@
             padding: 10px;
             width: 180px;
             margin-top: 50px;
+            a{
+                color: white;
+                text-decoration: none;
+            }
         }
         img{
             display: flex;
@@ -181,6 +189,11 @@
             padding: 10px;
             width: 180px;
             margin-top: 100px;
+            
+            a{
+                color: white;
+                text-decoration: none;
+            }
         }
         img{
             display: none;
@@ -258,6 +271,11 @@
             width: 260px;
             margin-top: 100px;
             font-size: 18px;
+            
+            a{
+                color: white;
+                text-decoration: none;
+            }
         }
         img{
             display: flex;
@@ -345,6 +363,11 @@
             width: 260px;
             margin-top: 100px;
             font-size: 18px;
+            
+            a{
+                color: white;
+                text-decoration: none;
+            }
         }
         img{
             display: flex;
