--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -23,9 +23,13 @@
                 width: 64px;
                 height: 64px;
             }
-            p{
-                font-family: 'Rokkitt', serif;
-                font-size: 24px;
+            a{
+                text-decoration: none;
+                
+                &:link,
+                &:visited{
+                    color: #000;
+                }
             }
         }
     }
@@ -58,6 +62,15 @@
             p{
                 font-family: 'Rokkitt', serif;
                 font-size: 24px;
+                
+                a{
+                    text-decoration: none;
+                    
+                    &:link,
+                    &:visited{
+                        color: #000;
+                    }
+                }
             }
         }
     }
@@ -98,6 +111,15 @@
                 flex-direction: column;
                 font-family: 'Rokkitt', serif;
                 font-size: 24px;
+                
+                a{
+                    text-decoration: none;
+                    
+                    &:link,
+                    &:visited{
+                        color: #000;
+                    }
+                }
             }
         }
     }
@@ -138,6 +160,15 @@
                 flex-direction: column;
                 font-family: 'Rokkitt', serif;
                 font-size: 24px;
+                
+                a{
+                    text-decoration: none;
+                    
+                    &:link,
+                    &:visited{
+                        color: #000;
+                    }
+                }
             }
         }
     }
@@ -178,6 +209,15 @@
                 flex-direction: column;
                 font-family: 'Rokkitt', serif;
                 font-size: 24px;
+                
+                a{
+                    text-decoration: none;
+                    
+                    &:link,
+                    &:visited{
+                        color: #000;
+                    }
+                }
             }
         }
     }
