Center text on footer in any breakpoints

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,4 +1,6 @@
-#footer{
+
+@media only screen and (min-width: 320px) and (max-width: 1920px){
+    #footer{
     overflow: hidden;
     margin-top: 100px;
     .footer-item{
@@ -11,4 +13,5 @@
             padding: 20px;
         }
     }
+}
 }
